generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider   = "prisma-dbml-generator"
  output     = "../docs"
  outputName = "schema.dbml"
}

datasource db {
  provider  = "postgresql"
  url       = env("DATABASE_URL")
  directUrl = env("DIRECT_URL")
}

model User {
  id          String   @id @default(uuid()) @db.Uuid
  email       String   @unique
  name        String
  avatarEmoji String   @default("😊") @map("avatar_emoji")
  // Language every push to this user is written in ('es' | 'en'). Synced from the
  // Supabase JWT on every request; 'es' keeps the ADD COLUMN valid on existing rows.
  language    String   @default("es")
  // Las franjas del usuario (su mañana, su tarde y su noche) tal y como las
  // guarda en `user_metadata`: la API las copia del JWT para poder convertir una
  // franja en horas reales. NULL = todavía no ha tocado las suyas.
  timeSlots   Json?    @map("time_slots")
  createdAt   DateTime @default(now()) @map("created_at") @db.Timestamptz
  updatedAt   DateTime @updatedAt @map("updated_at") @db.Timestamptz

  // Relations
  createdGroups           Group[]                  @relation("CreatedGroups")
  memberships             GroupMember[]
  availability            Availability[]
  createdEvents           Event[]                  @relation("CreatedEvents")
  eventResponses          EventAttendee[]
  pushTokens              PushToken[]
  notificationPreferences NotificationPreference[]
  notificationLogs        NotificationLog[]
  createdProposals        PlanProposal[]           @relation("CreatedProposals")
  proposalVotes           PlanVote[]
  createdPolls            AvailabilityPoll[]       @relation("PollCreator")
  pollResponses           PollResponse[]
  widgetTokens            WidgetToken[]
  notifications           Notification[]

  @@map("users")
}

model Group {
  id         String   @id @default(uuid()) @db.Uuid
  name       String
  emoji      String   @default("👥")
  inviteCode String   @unique @map("invite_code")
  createdById String  @map("created_by") @db.Uuid
  createdAt  DateTime @default(now()) @map("created_at") @db.Timestamptz
  updatedAt  DateTime @updatedAt @map("updated_at") @db.Timestamptz

  // Relations
  createdBy    User           @relation("CreatedGroups", fields: [createdById], references: [id])
  members      GroupMember[]
  availability Availability[]
  events       Event[]
  proposals    PlanProposal[]
  cities       GroupCity[]
  polls        AvailabilityPoll[]

  @@map("groups")
}

model GroupMember {
  groupId  String   @map("group_id") @db.Uuid
  userId   String   @map("user_id") @db.Uuid
  joinedAt DateTime @default(now()) @map("joined_at") @db.Timestamptz
  role     String   @default("member") @map("role")

  // Relations
  group Group @relation(fields: [groupId], references: [id], onDelete: Cascade)
  user  User  @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@id([groupId, userId])
  @@index([userId])
  @@map("group_members")
}

model Availability {
  id        String   @id @default(uuid()) @db.Uuid
  userId    String   @map("user_id") @db.Uuid
  groupId   String   @map("group_id") @db.Uuid
  date      DateTime @db.Date
  type      String   // 'day' | 'slots' | 'range'
  slots     String[] @default([])
  startTime String?  @map("start_time")
  endTime   String?  @map("end_time")
  createdAt DateTime @default(now()) @map("created_at") @db.Timestamptz

  // Relations
  user  User  @relation(fields: [userId], references: [id], onDelete: Cascade)
  group Group @relation(fields: [groupId], references: [id], onDelete: Cascade)

  @@unique([userId, groupId, date])
  @@index([groupId, date])
  @@map("availability")
}

model Event {
  id          String   @id @default(uuid()) @db.Uuid
  groupId     String   @map("group_id") @db.Uuid
  title       String
  description String?
  location    String?
  locationLat  Float?   @map("location_lat")
  locationLon  Float?   @map("location_lon")
  isOnline     Boolean  @default(false) @map("is_online")
  meetingUrl   String?  @map("meeting_url")
  date        DateTime @db.Date
  time        String?
  endTime     String?  @map("end_time")
  status      String   @default("pending") // 'pending' | 'confirmed' | 'cancelled'
  createdById String   @map("created_by") @db.Uuid
  reminderSentAt DateTime? @map("reminder_sent_at") @db.Timestamptz
  createdAt      DateTime  @default(now()) @map("created_at") @db.Timestamptz
  updatedAt      DateTime  @updatedAt @map("updated_at") @db.Timestamptz

  // Relations
  group        Group           @relation(fields: [groupId], references: [id], onDelete: Cascade)
  createdBy    User            @relation("CreatedEvents", fields: [createdById], references: [id])
  attendees    EventAttendee[]
  fromProposal PlanProposal?

  @@index([groupId, date])
  @@map("events")
}

model EventAttendee {
  eventId     String    @map("event_id") @db.Uuid
  userId      String    @map("user_id") @db.Uuid
  status      String    @default("pending") // 'pending' | 'confirmed' | 'declined'
  respondedAt DateTime? @map("responded_at") @db.Timestamptz

  // Relations
  event Event @relation(fields: [eventId], references: [id], onDelete: Cascade)
  user  User  @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@id([eventId, userId])
  @@index([userId])
  @@map("event_attendees")
}

model PushToken {
  id        String   @id @default(uuid()) @db.Uuid
  userId    String   @map("user_id") @db.Uuid
  token     String
  platform  String   // 'web' | 'android'
  createdAt DateTime @default(now()) @map("created_at") @db.Timestamptz
  // Last time the device re-registered this token. Drives the LRU eviction in
  // NotificationsService.registerToken; @default(now()) keeps the ADD COLUMN
  // valid on the existing production rows.
  updatedAt DateTime @default(now()) @updatedAt @map("updated_at") @db.Timestamptz

  // Relations
  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([userId, token])
  @@map("push_tokens")
}

model WidgetToken {
  id         String    @id @default(uuid()) @db.Uuid
  userId     String    @map("user_id") @db.Uuid
  tokenHash  String    @unique @map("token_hash")
  createdAt  DateTime  @default(now()) @map("created_at") @db.Timestamptz
  lastUsedAt DateTime? @map("last_used_at") @db.Timestamptz

  // Relations
  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@map("widget_tokens")
}

model NotificationPreference {
  userId  String  @map("user_id") @db.Uuid
  type    String  // 'new_event' | 'event_confirmed' | 'event_declined' | 'member_joined' | 'member_left'
  enabled Boolean @default(true)

  // Relations
  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@id([userId, type])
  @@map("notification_preferences")
}

model NotificationLog {
  id          String   @id @default(uuid()) @db.Uuid
  userId      String   @map("user_id") @db.Uuid
  type        String?  // notification type (e.g. 'new_event', 'event_reminder')
  title       String
  body        String
  data        Json?    @db.JsonB
  tokenCount  Int      @map("token_count")
  sentCount   Int      @map("sent_count")
  failedCount Int      @map("failed_count")
  createdAt   DateTime @default(now()) @map("created_at") @db.Timestamptz

  // Relations
  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId, createdAt(sort: Desc)])
  @@map("notification_logs")
}

/// Bandeja de avisos: el mismo aviso que sale por push, guardado para poder leerlo
/// dentro de la app. Se escribe en el fan-out de NotificationsService, en el mismo
/// punto que el push y con el texto ya en el idioma de cada destinatario.
model Notification {
  id        String    @id @default(uuid()) @db.Uuid
  userId    String    @map("user_id") @db.Uuid
  type      String
  title     String
  body      String
  /// Mismo payload que viaja en el push: `resolvePushRoute` lo lee para navegar.
  data      Json?     @db.JsonB
  readAt    DateTime? @map("read_at") @db.Timestamptz
  createdAt DateTime  @default(now()) @map("created_at") @db.Timestamptz

  // Relations
  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId, createdAt(sort: Desc)])
  @@index([userId, readAt])
  @@map("notifications")
}

model GroupCity {
  id      String @id @default(uuid()) @db.Uuid
  groupId String @map("group_id") @db.Uuid
  name    String
  lat     Float
  lon     Float

  // Relations
  group Group @relation(fields: [groupId], references: [id], onDelete: Cascade)

  @@map("group_cities")
}

model PlanProposal {
  id               String   @id @default(uuid()) @db.Uuid
  groupId          String   @map("group_id") @db.Uuid
  title            String
  description      String?
  location         String?
  isOnline         Boolean  @default(false) @map("is_online")
  meetingUrl       String?  @map("meeting_url")
  proposedDate     String?  @map("proposed_date")
  createdById      String   @map("created_by") @db.Uuid
  status           String   @default("open") // 'open' | 'closed' | 'converted'
  convertedEventId String?  @unique @map("converted_event_id") @db.Uuid
  createdAt        DateTime @default(now()) @map("created_at") @db.Timestamptz
  updatedAt        DateTime @updatedAt @map("updated_at") @db.Timestamptz

  // Relations
  group          Group      @relation(fields: [groupId], references: [id], onDelete: Cascade)
  createdBy      User       @relation("CreatedProposals", fields: [createdById], references: [id])
  votes          PlanVote[]
  convertedEvent Event?     @relation(fields: [convertedEventId], references: [id])

  @@index([groupId, status])
  @@map("plan_proposals")
}

model PlanVote {
  proposalId String   @map("proposal_id") @db.Uuid
  userId     String   @map("user_id") @db.Uuid
  vote       String   // 'yes' | 'no'
  votedAt    DateTime @default(now()) @map("voted_at") @db.Timestamptz

  // Relations
  proposal PlanProposal @relation(fields: [proposalId], references: [id], onDelete: Cascade)
  user     User         @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@id([proposalId, userId])
  @@map("plan_votes")
}

model AvailabilityPoll {
  id          String    @id @default(uuid()) @db.Uuid
  groupId     String    @map("group_id") @db.Uuid
  createdById String    @map("created_by") @db.Uuid
  date        DateTime  @db.Date
  slot        String? // 'Mañana' | 'Tarde' | 'Noche' | null = todo el día
  status      String    @default("open") // 'open' | 'completed' | 'closed'
  completedAt DateTime? @map("completed_at") @db.Timestamptz
  // Set the first time the ring closes, and never cleared: reopening is silent, so
  // without this the next unanimous 'yes' re-sent «el aro se cierra».
  completedNotifiedAt DateTime? @map("completed_notified_at") @db.Timestamptz
  createdAt           DateTime  @default(now()) @map("created_at") @db.Timestamptz

  // Relations
  group     Group          @relation(fields: [groupId], references: [id], onDelete: Cascade)
  createdBy User           @relation("PollCreator", fields: [createdById], references: [id], onDelete: Cascade)
  responses PollResponse[]

  @@index([groupId, status])
  @@map("availability_polls")
}

model PollResponse {
  pollId      String   @map("poll_id") @db.Uuid
  userId      String   @map("user_id") @db.Uuid
  answer      String // 'yes' | 'no' | 'unsure'
  respondedAt DateTime @default(now()) @map("responded_at") @db.Timestamptz

  // Relations
  poll AvailabilityPoll @relation(fields: [pollId], references: [id], onDelete: Cascade)
  user User             @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@id([pollId, userId])
  @@map("poll_responses")
}
