//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table users {
  id String [pk]
  email String [unique, not null]
  name String [not null]
  avatarEmoji String [not null, default: '😊']
  language String [not null, default: 'es']
  timeSlots Json
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  createdGroups groups [not null]
  memberships group_members [not null]
  availability availability [not null]
  createdEvents events [not null]
  eventResponses event_attendees [not null]
  pushTokens push_tokens [not null]
  notificationPreferences notification_preferences [not null]
  notificationLogs notification_logs [not null]
  createdProposals plan_proposals [not null]
  proposalVotes plan_votes [not null]
  createdPolls availability_polls [not null]
  pollResponses poll_responses [not null]
  widgetTokens widget_tokens [not null]
  notifications notifications [not null]
}

Table groups {
  id String [pk]
  name String [not null]
  emoji String [not null, default: '👥']
  inviteCode String [unique, not null]
  createdById String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  createdBy users [not null]
  members group_members [not null]
  availability availability [not null]
  events events [not null]
  proposals plan_proposals [not null]
  cities group_cities [not null]
  polls availability_polls [not null]
}

Table group_members {
  groupId String [not null]
  userId String [not null]
  joinedAt DateTime [default: `now()`, not null]
  role String [not null, default: 'member']
  group groups [not null]
  user users [not null]

  indexes {
    (groupId, userId) [pk]
  }
}

Table availability {
  id String [pk]
  userId String [not null]
  groupId String [not null]
  date DateTime [not null]
  type String [not null]
  slots String[] [not null]
  startTime String
  endTime String
  createdAt DateTime [default: `now()`, not null]
  user users [not null]
  group groups [not null]

  indexes {
    (userId, groupId, date) [unique]
  }
}

Table events {
  id String [pk]
  groupId String [not null]
  title String [not null]
  description String
  location String
  locationLat Float
  locationLon Float
  isOnline Boolean [not null, default: false]
  meetingUrl String
  date DateTime [not null]
  time String
  endTime String
  status String [not null, default: 'pending']
  createdById String [not null]
  reminderSentAt DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  group groups [not null]
  createdBy users [not null]
  attendees event_attendees [not null]
  fromProposal plan_proposals
}

Table event_attendees {
  eventId String [not null]
  userId String [not null]
  status String [not null, default: 'pending']
  respondedAt DateTime
  event events [not null]
  user users [not null]

  indexes {
    (eventId, userId) [pk]
  }
}

Table push_tokens {
  id String [pk]
  userId String [not null]
  token String [not null]
  platform String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  user users [not null]

  indexes {
    (userId, token) [unique]
  }
}

Table widget_tokens {
  id String [pk]
  userId String [not null]
  tokenHash String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  lastUsedAt DateTime
  user users [not null]
}

Table notification_preferences {
  userId String [not null]
  type String [not null]
  enabled Boolean [not null, default: true]
  user users [not null]

  indexes {
    (userId, type) [pk]
  }
}

Table notification_logs {
  id String [pk]
  userId String [not null]
  type String
  title String [not null]
  body String [not null]
  data Json
  tokenCount Int [not null]
  sentCount Int [not null]
  failedCount Int [not null]
  createdAt DateTime [default: `now()`, not null]
  user users [not null]
}

Table notifications {
  id String [pk]
  userId String [not null]
  type String [not null]
  title String [not null]
  body String [not null]
  data Json [note: 'Mismo payload que viaja en el push: `resolvePushRoute` lo lee para navegar.']
  readAt DateTime
  createdAt DateTime [default: `now()`, not null]
  user users [not null]

  Note: 'Bandeja de avisos: el mismo aviso que sale por push, guardado para poder leerlo
dentro de la app. Se escribe en el fan-out de NotificationsService, en el mismo
punto que el push y con el texto ya en el idioma de cada destinatario.'
}

Table group_cities {
  id String [pk]
  groupId String [not null]
  name String [not null]
  lat Float [not null]
  lon Float [not null]
  group groups [not null]
}

Table plan_proposals {
  id String [pk]
  groupId String [not null]
  title String [not null]
  description String
  location String
  isOnline Boolean [not null, default: false]
  meetingUrl String
  proposedDate String
  createdById String [not null]
  status String [not null, default: 'open']
  convertedEventId String [unique]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  group groups [not null]
  createdBy users [not null]
  votes plan_votes [not null]
  convertedEvent events
}

Table plan_votes {
  proposalId String [not null]
  userId String [not null]
  vote String [not null]
  votedAt DateTime [default: `now()`, not null]
  proposal plan_proposals [not null]
  user users [not null]

  indexes {
    (proposalId, userId) [pk]
  }
}

Table availability_polls {
  id String [pk]
  groupId String [not null]
  createdById String [not null]
  date DateTime [not null]
  slot String
  status String [not null, default: 'open']
  completedAt DateTime
  completedNotifiedAt DateTime
  createdAt DateTime [default: `now()`, not null]
  group groups [not null]
  createdBy users [not null]
  responses poll_responses [not null]
}

Table poll_responses {
  pollId String [not null]
  userId String [not null]
  answer String [not null]
  respondedAt DateTime [default: `now()`, not null]
  poll availability_polls [not null]
  user users [not null]

  indexes {
    (pollId, userId) [pk]
  }
}

Ref: groups.createdById > users.id

Ref: group_members.groupId > groups.id [delete: Cascade]

Ref: group_members.userId > users.id [delete: Cascade]

Ref: availability.userId > users.id [delete: Cascade]

Ref: availability.groupId > groups.id [delete: Cascade]

Ref: events.groupId > groups.id [delete: Cascade]

Ref: events.createdById > users.id

Ref: event_attendees.eventId > events.id [delete: Cascade]

Ref: event_attendees.userId > users.id [delete: Cascade]

Ref: push_tokens.userId > users.id [delete: Cascade]

Ref: widget_tokens.userId > users.id [delete: Cascade]

Ref: notification_preferences.userId > users.id [delete: Cascade]

Ref: notification_logs.userId > users.id [delete: Cascade]

Ref: notifications.userId > users.id [delete: Cascade]

Ref: group_cities.groupId > groups.id [delete: Cascade]

Ref: plan_proposals.groupId > groups.id [delete: Cascade]

Ref: plan_proposals.createdById > users.id

Ref: plan_proposals.convertedEventId - events.id

Ref: plan_votes.proposalId > plan_proposals.id [delete: Cascade]

Ref: plan_votes.userId > users.id [delete: Cascade]

Ref: availability_polls.groupId > groups.id [delete: Cascade]

Ref: availability_polls.createdById > users.id [delete: Cascade]

Ref: poll_responses.pollId > availability_polls.id [delete: Cascade]

Ref: poll_responses.userId > users.id [delete: Cascade]